--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#menu">Menu del dia</a>
           </li>
           <li>
-            <a href="#">sobre nosotros</a>
+            <a href="#products">productos</a>
           </li>
           <li>
             <a href="#">contáctanos </a>
@@ -159,9 +159,99 @@
         </article>
       </div>
     </section>
-    <section class="section-about-us">
+    <section class="section-about-us mx-container" id="products">
       <div class="section-title">
-        <h5>sobre nosotros</h5>
+        <h5>Productos</h5>
+      </div>
+      <div class="grid-products margin-sections">
+        <article class="card-product">
+          <div class="card-image">
+            <img src="assets/images/p1.png"/>
+          </div>
+          <div class="card-body">
+            <div class="info-product">
+              <h4>coffee </h4>
+              <span>$ 45</span>
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+              </p>
+            </div>
+            <div class="btn-buy">
+              <button class="btn">
+                comprar 
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card-product">
+          <div class="card-image">
+            <img src="assets/images/p2.png"/>
+          </div>
+          <div class="card-body">
+            <div class="info-product">
+              <h4>coffee </h4>
+              <span>$ 45</span>
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+              </p>
+            </div>
+            <div class="btn-buy">
+              <button class="btn">
+                comprar 
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card-product">
+          <div class="card-image">
+            <img src="assets/images/p3.png"/>
+          </div>
+          <div class="card-body">
+            <div class="info-product">
+              <h4>coffee </h4>
+              <span>$ 45</span>
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+              </p>
+            </div>
+            <div class="btn-buy">
+              <button class="btn">
+                comprar 
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card-product">
+          <div class="card-image">
+            <img src="assets/images/p4.png"/>
+          </div>
+          <div class="card-body">
+            <div class="info-product">
+              <h4>coffee </h4>
+              <span>$ 45</span>
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin 
+              </p>
+            </div>
+            <div class="btn-buy">
+              <button class="btn">
+                comprar 
+              </button>
+            </div>
+          </div>
+        </article>
       </div>
     </section>
   </main>
