--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#products">productos</a>
           </li>
           <li>
-            <a href="#">contáctanos </a>
+            <a href="#">suscribirme</a>
           </li>
         </ul>
       </div>
@@ -252,6 +252,24 @@
             </div>
           </div>
         </article>
+      </div>
+    </section>
+    <section class="section-contac margin-sections">
+      <div class="bg-shadow"></div>
+      <div class="text-content mx-container">
+        <div class="box-form">
+        <div class="text">
+          <h3>suscríbete para recibir novedades</h3>
+        </div>
+          <div class="box-input">
+            <form action="#" method="POST">
+              <input type="email" id="email" name="email" placeholder="E-mail"/>
+              <button type="submit" class="btn-sub">
+                suscribirme 
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
   </main>
